--- a/project_adas/src/makefile
+++ b/project_adas/src/makefile
@@ -1,29 +1,42 @@
+deleteAllBin:
+	rm hmi || frontwindshieldcamera || forwardingfacingradar || surroundviewcamera
+	|| surround-view-camera || park-assist || parkassist || forwarding-facing-camera
+	|| front-windshield-camera || steerbywire || steer-by-wire || brakebywire || brake-by-wire
+hmiMake:
+	rm hmi
+	gcc hmi.c -o hmi
+	clear
+	echo "hmi è stato creato correttamente"
 frontwindshieldscameraMake: 
+	rm frontwindshieldcamera || front-windshield-camera
 	gcc frontwindshieldcamera.c -o front-windshield-camera
 	clear
-	@echo "frontwindshieldcamera ès stato creato correttamente."
+	@echo "frontwindshieldcamera è stato creato correttamente."
 
 forwardingfacingradarMake:
+	rm forwardingfacingradar || forwarding-facing-camera
 	gcc forwardingfacingradar.c -o forwarding-facing-camera
 	clear
 	@echo "forwardingfacingradar è stato creato correttamente."
 surroundviewcameraMake:
-	gcc surroundviewcamera.c -o surround-view-camera
+	rm surround-view-camera || surroundviewcamera
+	gcc surroundviewcamera.c -o surroundviewcamera
 	clear
 	@echo "svc è stato creato correttamente."
 parkassistMake: 
-	gcc parkassist.c -o park-assist
+	rm park-assist || paskassist
+	gcc parkassist.c -o parkassist
 	clear
 	@echo "pa è stato creato correttamente."
 
 allMake:
-	gcc frontwindshieldcamera.c -o front-windshield-camera
-	gcc forwardingfacingradar.c -o forwarding-facing-radar
-	gcc surroundviewcamera.c -o surround-view-camera
-	gcc parkassist.c -o park-assist
-	gcc steerbywire.c -o steer-by-wire
-	gcc brakebywire.c -o brake-by-wire
-	gcc throttlebycontrol.c -o throttle-by-control
+	gcc frontwindshieldcamera.c -o frontwindshieldcamera
+	gcc forwardingfacingradar.c -o forwardingfacingradar
+	gcc surroundviewcamera.c -o surroundviewcamera
+	gcc parkassist.c -o parkassist
+	gcc steerbywire.c -o steerbywire
+	gcc brakebywire.c -o brakebywire
+	gcc throttlebycontrol.c -o throttlebycontrol
 	gcc ecu.c -o ecu
 	gcc hmi.c -o hmi
 	@echo "Tutti i file sono stati creati correttamente."
