--- a/project_adas/src/Makefile
+++ b/project_adas/src/Makefile
@@ -1,12 +1,12 @@
 OUTPUT_DIR := .
 
-SRCS := hmiInput.c frontwindshieldcamera.c forwardfacingradar.c surroundviewcamera.c parkassist.c steerbywire.c brakebywire.c throttlebycontrol.c ecu.c hmi.c
+SRCS := hmiInput.c frontwindshieldcamera.c forwardfacingradar.c surroundviewcameras.c parkassist.c steerbywire.c brakebywire.c throttlebycontrol.c ecu.c hmi.c
 
 TARGETS := $(patsubst %.c,$(OUTPUT_DIR)/%,$(SRCS))
 
 all: $(TARGETS)
 
-$(OUTPUT_DIR)/%: %.c functions.c
+$(OUTPUT_DIR)/%: %.c commonFunctions.c socketFunctions.c
 	gcc -o $@ $^
 
 clean:
