--- a/project-adas/.vscode/settings.json
+++ b/project-adas/.vscode/settings.json
@@ -3,6 +3,7 @@
         "functions.h": "c",
         "time.h": "c",
         "types.h": "c",
-        "stdlib.h": "c"
+        "stdlib.h": "c",
+        "utilitysocket.h": "c"
     }
 }
